# ComTraq-MPC

./: .gitignore  CMakeLists.txt  README.md  backup_code  build_model_lib.sh  check  check.cpp  check.py  conf.py  dqn.ipynb  dqn_test1.py  dqn_test2.py  gitter.sh  mcts.py  mcts_2.py  mcts_parallel.py  mcts_policy.pkl  mcts_policy_3.pkl  mcts_policy_check.py  mcts_single.py  model  model.cpp  model_demo.py  ppo_test1.py  ppo_test_op.ipynb  ppo_test_op.py  requirements.txt  setup.sh  test  test_model.cpp  testing.cpp
PPO/: model_ppo.py  ppo_test_op.py  rollout_buffer.py  training_main_ppo.py  training_settings_ppo.ini  training_simulation_ppo.py
hardware_test/: map_talbot_new.pgm
model_generation/: CMakeLists.txt  README.md  build_model.sh  config.cpp  config.h  main.cpp  model  model.cpp  model_demo.py  model_legacy.cpp  model_new.cpp  uuv.cpp  uuv.h
model_weights/: policy_ep_10.pt  policy_ep_100.pt  policy_ep_110.pt  policy_ep_120.pt  policy_ep_130.pt  policy_ep_140.pt  policy_ep_150.pt  policy_ep_160.pt  policy_ep_170.pt  policy_ep_180.pt  policy_ep_190.pt  policy_ep_20.pt  policy_ep_200.pt  policy_ep_210.pt  policy_ep_220.pt  policy_ep_230.pt  policy_ep_240.pt  policy_ep_250.pt  policy_ep_260.pt  policy_ep_270.pt  policy_ep_280.pt  policy_ep_290.pt  policy_ep_30.pt  policy_ep_300.pt  policy_ep_310.pt  policy_ep_320.pt  policy_ep_330.pt  policy_ep_340.pt  policy_ep_350.pt  policy_ep_360.pt  policy_ep_370.pt  policy_ep_380.pt  policy_ep_390.pt  policy_ep_40.pt  policy_ep_400.pt  policy_ep_410.pt  policy_ep_420.pt  policy_ep_430.pt  policy_ep_440.pt  policy_ep_450.pt  (+10 more)
(+226 files in other folders)
